--- a/html101.html
+++ b/html101.html
@@ -3,8 +3,9 @@
     	<title>HTML 101</title>
 	</head>
 	<body>
-    	<h1>Welcome to my HTML page at 
+    	<h1>Welcome to my HTML page for IT 246 at 
 	<a href="http://www.usf.edu">USF</a></h1>
+	<h2>Salutations<h2>
     	<p>Please check back later.</p>
 	</body>
 </html>
